Passwords: jouko 123, ram 1234
Former-commit-id: 1bf6721c74c165ea448a4dfd249613ecc0f757b2

--- a/FastFoodDemo/app/views/order.scala.html
+++ b/FastFoodDemo/app/views/order.scala.html
@@ -18,6 +18,15 @@
 
         You will get your order in approximately never
 
+        <br><br>
+
+        <a href="@routes.LoginController.login">Login</a>
+
+        <br><br>
+
+        <a href="@routes.ListController.list">See all of your orders</a>
+
+
 
 }
 
