--- a/FastFoodDemo/app/views/login.scala.html
+++ b/FastFoodDemo/app/views/login.scala.html
@@ -14,7 +14,7 @@
 
     @helper.inputText(form("name"))
 
-    @helper.inputText(form("password"))
+    @helper.inputPassword(form("password"))
 
     <button>Login</button>
     }
