--- a/FastFoodDemo/app/views/index.scala.html
+++ b/FastFoodDemo/app/views/index.scala.html
@@ -2,8 +2,6 @@
 
   @main("Welcome to Play") {
     <div>
-      <ul>
-        <li>Please go to <a href="@routes.LoginController.login">@routes.LoginController.login</a></li>
-      </ul>
+        <a href="@routes.LoginController.login">Login</a>
     </div>
   }
