--- a/FastFoodDemo/app/views/login.scala.html
+++ b/FastFoodDemo/app/views/login.scala.html
@@ -18,4 +18,20 @@
 
     <button>Login</button>
     }
+
+    <table>
+        <tr>
+            <td>User</td>
+            <td>Password</td>
+        </tr>
+        <tr>
+            <td>jouko</td>
+            <td>123</td>
+        </tr>
+        <tr>
+            <td>ram</td>
+            <td>1234</td>
+        </tr>
+    </table>
+
 }
