--- a/FastFoodDemo/app/views/menu.scala.html
+++ b/FastFoodDemo/app/views/menu.scala.html
@@ -1,4 +1,4 @@
-@(postUrl: Call, form: Form[MenuForm.MenuData])(implicit request: MessagesRequestHeader)
+@(postUrl: Call, form: Form[MenuForm.MenuData])(implicit messages: Messages)
 
 @main("menu") {
 
