--- a/FastFoodDemo/app/views/order.scala.html
+++ b/FastFoodDemo/app/views/order.scala.html
@@ -1,18 +1,18 @@
-@(orderForm: MenuForm.MenuData)(implicit messages: Messages)
+@(orderForm: MenuForm.MenuData, foodItems: Array[Food])(implicit messages: Messages)
 
 @main("Order") {
 
         <h1>You ordered</h1>
 
 
-        @{orderForm.cheeseBurger} Cheese Burgers<br>
-        @{orderForm.doubleDouble} Double Doubles<br>
-        @{orderForm.fries} Fries<br>
-        @{orderForm.milkShake} Milk Shakes<br>
+        @{orderForm.cheeseBurger} Cheese Burgers $@{foodItems(0).price}<br>
+        @{orderForm.doubleDouble} Double Doubles $@{foodItems(1).price}<br>
+        @{orderForm.fries} Fries $@{foodItems(2).price}<br>
+        @{orderForm.milkShake} Milk Shakes $@{foodItems(3).price}<br>
 
         <br>
 
-        Total $@{orderForm.cheeseBurger*2 + orderForm.doubleDouble*4 + orderForm.fries + orderForm.milkShake*3}
+        Total $@{orderForm.cheeseBurger*foodItems(0).price + orderForm.doubleDouble*foodItems(1).price + orderForm.fries*foodItems(2).price + orderForm.milkShake*foodItems(3).price}
 
         <br><br>
 
