Form error handling
Former-commit-id: 522c8b5bf0b4f365c709b8515d7728bafa50fa05

--- a/FastFoodDemo/app/views/list.scala.html
+++ b/FastFoodDemo/app/views/list.scala.html
@@ -16,7 +16,8 @@
 
     <h1>You ordered</h1>
 
-    <table>
+    <table class="alternate">
+        <tbody>
         <tr>
             <td>Item</td>
             <td>Quantity</td>
@@ -31,6 +32,7 @@
                 </tr>
         }
     }
+        </tbody>
     </table>
 
 }
