--- a/FastFoodDemo/app/views/main.scala.html
+++ b/FastFoodDemo/app/views/main.scala.html
@@ -10,6 +10,18 @@
         <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
     </head>
     <body>
-        @content
+        <p class="header" align="center" style="font-size: 5em;">Fake In-N-Out</p>
+        <table class="mainTable" align="center">
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>
+                <td>@content</td>
+                <td></td>
+            </tr>
+         </table>
     </body>
 </html>
